
add_subdirectory(libpsc)

macro(add_psc_executable name)
  add_executable(${name} ${name}.cxx)
  target_link_libraries(${name} psc)
endmacro(add_psc_executable)

#add_psc_executable(psc_Isotropic_AW_ppc50)
#add_psc_executable(psc_Isotropic_AW_ppc100)
#add_psc_executable(psc_Isotropic_AW_ppc150)
#add_psc_executable(psc_Isotropic_AW_ppc200)
#add_psc_executable(psc_Isotropic_AW_ppc250)
#add_psc_executable(psc_Isotropic_AW_ppc300)
#add_psc_executable(psc_Isotropic_AW_mime1)
#add_psc_executable(psc_Isotropic_AW_mime10)
#add_psc_executable(psc_Isotropic_AW_mime50)
#add_psc_executable(psc_Isotropic_AW_mime100)
#add_psc_executable(psc_Isotropic_AW_mime150)
#add_psc_executable(psc_Isotropic_AW_mime200)
#add_psc_executable(psc_Isotropic_AW_mime250)
#add_psc_executable(psc_Isotropic_AW_mime300)
#add_psc_executable(psc_Isotropic_AW_mime400)
#add_psc_executable(psc_Isotropic_AW_mime500)
add_psc_executable(psc_Isotropic_AW_VA2c_04)
add_psc_executable(psc_Isotropic_AW_VA2c_08)
add_psc_executable(psc_Isotropic_AW_ppc50_subset)
add_psc_executable(psc_CB8waves_103_thinner_8)
add_psc_executable(psc_CB8waves_103_thinner_double)
add_psc_executable(psc_electron_project2)
add_psc_executable(psc_electron_project5)
add_psc_executable(psc_electron_project5_strahl)

if(USE_VPIC)
  add_psc_executable(psc_harris_xz)
endif()
